--- a/src/main/webapp/quaresmas/quaresma-liturgica.xhtml
+++ b/src/main/webapp/quaresmas/quaresma-liturgica.xhtml
@@ -42,7 +42,7 @@
     </h:head>
 
     <h:body>
-        <h:form id="formQuaresmaLiturgica" prependId="false">
+        <h:form id="formQuaresmaLiturgica">
             <div class="container">
                 <ui:include src="/includes/menu.xhtml"/>
 
