--- a/src/main/webapp/quaresmas/quaresma-sao-jose.xhtml
+++ b/src/main/webapp/quaresmas/quaresma-sao-jose.xhtml
@@ -74,7 +74,7 @@
     </h:head>
 
     <h:body>
-        <h:form id="formQuaresmaJose" prependId="false">
+        <h:form id="formQuaresmaJose">
             <div class="container">
                 <!-- Menu padronizado igual ao Santo Terço -->
                 <ui:include src="/includes/menu.xhtml"/>
