--- a/src/main/webapp/quaresmas/quaresma-liturgica.xhtml
+++ b/src/main/webapp/quaresmas/quaresma-liturgica.xhtml
@@ -86,7 +86,7 @@
                 </div>
 
                 <p:accordionPanel id="accordion" multiple="true" activeIndex="-1"
-                                  style="display: #{quaresmaLiturgicaBean.diaSelecionadoRenderizar ? 'block' : 'none'};">
+                                  style="display: #{quaresmaLiturgicaBean.diaSelecionadoRenderizar ? 'block' : 'none'}">
 
                     <p:tab title="Tema do Dia">
                         <pre style="white-space: pre-line;">#{quaresmaLiturgicaBean.temaDoDia}</pre>
